examples/negative/type_errors/L2/8_bool_upper_limit_case.ob
MODULE BoolUpLimCase;

VAR x,y: INTEGER;

BEGIN
  x := 0;
  CASE x OF
    0..TRUE: y := 0
  | 20: y := 1
  END
END BoolUpLimCase.
